--- a/homepage.html
+++ b/homepage.html
@@ -4,6 +4,6 @@
 <title>Aggrigator</title>
 </head>
 <body>
-<h1>vegetable Aggrigator Kisumu</h1>
+<h1>vegetable Aggrigator Kisumu County</h1>
 <body>
 </html>
